feat: initialize Gemini watermark remover web application with UI, i18n, and local image processing capabilities.

--- a/public/terms.html
+++ b/public/terms.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en" class="scroll-smooth">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,118 +8,201 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
-          colors: {
-            primary: '#10B981', 
-            'primary-hover': '#059669',
-            dark: '#1F2937',
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
           },
-          boxShadow: {
-            'soft': '0 4px 20px -2px rgba(16, 185, 129, 0.1)',
-            'card': '0 0 20px rgba(0,0,0,0.05)'
+          colors: {
+            primary: {
+              500: '#3b82f6',
+              600: '#2563eb',
+            },
+            simple: {
+              dark: {
+                bg: '#1a1a1a',
+                card: '#2a2a2a',
+                text: '#ffffff',
+                border: '#333333'
+              },
+              light: {
+                bg: '#f5f5f5',
+                card: '#ffffff',
+                text: '#1a1a1a',
+                border: '#e5e5e5'
+              }
+            }
           }
         }
       }
     }
   </script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #d4d4d8;
+      border-radius: 4px;
+    }
+
+    .dark ::-webkit-scrollbar-thumb {
+      background: #3f3f46;
+    }
+
+    .dark ::-webkit-scrollbar-track {
+      background: #1a1a1a;
+    }
+
+    /* Flat Card Styles */
+    .simple-card {
+      background-color: white;
+      border: 1px solid #e5e5e5;
+      border-radius: 0.75rem;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    }
+
+    .dark .simple-card {
+      background-color: #2a2a2a;
+      border: 1px solid #333333;
+      box-shadow: none;
+    }
+
+    body {
+      transition: background-color 0.2s ease, color 0.2s ease;
+    }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-800 antialiased selection:bg-primary selection:text-white flex flex-col min-h-screen">
 
-  <header class="sticky top-0 z-50 bg-white/90 backdrop-blur-md border-b border-gray-100">
+<body
+  class="bg-simple-light-bg text-simple-light-text antialiased flex flex-col min-h-screen dark:bg-simple-dark-bg dark:text-simple-dark-text">
+
+  <script>
+    if (localStorage.getItem('theme') === 'dark' || (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      document.documentElement.classList.add('dark');
+    } else {
+      document.documentElement.classList.remove('dark');
+    }
+  </script>
+
+  <header
+    class="sticky top-0 z-50 bg-white border-b border-gray-200 dark:bg-simple-dark-card dark:border-simple-dark-border transition-colors">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-      <div class="flex items-center gap-1">
-        <svg class="h-10 w-10 text-indigo-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <div class="flex items-center gap-3">
+        <svg class="h-8 w-8 text-primary-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="m12 3-1.9 5.8-5.8 1.9 5.8 1.9 1.9 5.8 1.9-5.8 5.8-1.9-5.8-1.9Z"></path>
         </svg>
-        <h1 class="text-sm font-bold tracking-tight text-primary md:text-xl">
-          <a href="./" class="hover:text-primary transition-colors" title="Gemini Watermark Remover">Gemini <span class="text-gray-700 font-medium">Watermark Remover</span></a>
+        <h1 class="text-xl font-bold tracking-tight">
+          <a href="./" class="hover:text-primary-500 transition-colors">Gemini Watermark Remover</a>
         </h1>
       </div>
+      <a href="index.html"
+        class="text-sm font-medium text-gray-600 hover:text-black dark:text-gray-400 dark:hover:text-white transition-colors">
+        &larr; Back to Tool
+      </a>
     </div>
   </header>
 
   <main class="flex-grow py-12 px-4 sm:px-6">
     <div class="max-w-4xl mx-auto">
-      
+
       <div class="text-center mb-12">
-        <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Terms of Use</h2>
-        <p class="text-sm text-gray-400 mt-2">Last updated: December 19, 2025</p>
+        <h2 class="text-3xl md:text-4xl font-extrabold mb-4">Terms of Use</h2>
+        <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Last updated: December 19, 2025</p>
       </div>
 
-      <div class="bg-white rounded-2xl shadow-card border border-amber-100 overflow-hidden mb-10">
-        <div class="bg-amber-50/50 border-b border-amber-100 px-6 py-4 flex items-center gap-3">
-          <svg class="w-6 h-6 text-amber-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>
-          <h3 class="text-lg font-bold text-gray-800">Important Disclaimer</h3>
+      <!-- Disclaimer Card -->
+      <div class="simple-card overflow-hidden mb-10 border-l-4 border-l-yellow-500">
+        <div
+          class="bg-yellow-50 dark:bg-yellow-900/10 px-6 py-4 flex items-center gap-3 border-b border-yellow-100 dark:border-yellow-900/20">
+          <svg class="w-6 h-6 text-yellow-600 dark:text-yellow-500" fill="none" stroke="currentColor"
+            viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z">
+            </path>
+          </svg>
+          <h3 class="text-lg font-bold text-yellow-900 dark:text-yellow-100">Important Disclaimer</h3>
         </div>
-        
+
         <div class="p-6 md:p-8 space-y-6">
           <div class="flex gap-4">
             <div>
-              <p class="font-semibold text-gray-900">This tool is provided for personal and educational use.</p>
+              <p class="font-semibold">This tool is provided for personal and educational use.</p>
             </div>
           </div>
 
-          <div class="border-t border-dashed border-gray-200 my-2"></div>
+          <div class="border-t border-gray-200 dark:border-gray-700 my-2"></div>
 
-          <p class="text-sm font-bold text-gray-500 uppercase tracking-wider pl-10">A few things to keep in mind</p>
+          <p class="text-sm font-bold text-gray-500 uppercase tracking-wider pl-10">Key Points</p>
 
           <div class="flex gap-4">
             <div class="flex-shrink-0 mt-1">
-              <svg class="w-6 h-6 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3"></path></svg>
+              <svg class="w-6 h-6 text-primary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
             </div>
             <div>
-              <p class="font-semibold text-gray-900">Respect content policies.</p>
-              <p class="text-gray-600 mt-1 text-sm">The removal of watermarks may have legal or ethical implications depending on how you use the resulting images.</p>
+              <p class="font-semibold">Respect content policies.</p>
+              <p class="text-gray-600 dark:text-gray-400 mt-1 text-sm">The removal of watermarks may have legal or
+                ethical implications. Ensure you have the right to modify the content.</p>
             </div>
           </div>
 
           <div class="flex gap-4">
             <div class="flex-shrink-0 mt-1">
-              <svg class="w-6 h-6 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
+              <svg class="w-6 h-6 text-primary-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+              </svg>
             </div>
             <div>
-              <p class="font-semibold text-gray-900">This tool removes visible watermarks only.</p>
-              <p class="text-gray-600 mt-1 text-sm">It does not affect any invisible/steganographic watermarks that may be embedded in the image data.</p>
-
-              <p class="text-orange-700 mt-1 bg-orange-50 inline-block px-2 py-1 rounded text-sm">
-                <a href="https://support.google.com/gemini/answer/16722517" target="_blank" rel="noopener noreferrer">
-                  Learn more about SynthID
-                  <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 inline-block mr-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                    <polyline points="15 3 21 3 21 9"></polyline>
-                    <line x1="10" y1="14" x2="21" y2="3"></line>
-                  </svg>
-                </a>
-              </p>
+              <p class="font-semibold">Visible watermarks only.</p>
+              <p class="text-gray-600 dark:text-gray-400 mt-1 text-sm">It does not affect any invisible/steganographic
+                watermarks that may be embedded in the image data.</p>
             </div>
           </div>
+
         </div>
       </div>
 
-      <div class="space-y-6 text-gray-600">
-        <section class="bg-white rounded-xl p-6 shadow-sm border border-gray-100">
-          <h3 class="text-lg font-bold text-gray-900 mb-3">Privacy Policy</h3>
+      <div class="space-y-6 text-gray-600 dark:text-gray-300">
+        <section class="simple-card p-6">
+          <h3 class="text-lg font-bold mb-3 text-black dark:text-white">Privacy Policy</h3>
           <p class="leading-relaxed text-sm">
-            This service provides browser-based image processing. All processing is done locally on your device. We do not upload your images to any remote servers.
+            This service provides browser-based image processing. All processing is done locally on your device. We do
+            not upload your images to any remote servers.
           </p>
         </section>
 
-        <section class="bg-white rounded-xl p-6 shadow-sm border border-gray-100">
-          <h3 class="text-lg font-bold text-gray-900 mb-3">Limitation of Liability</h3>
+        <section class="simple-card p-6">
+          <h3 class="text-lg font-bold mb-3 text-black dark:text-white">Limitation of Liability</h3>
           <p class="leading-relaxed text-sm">
-            The tool is provided "as is". The developer shall not be liable for any data loss, image corruption, or legal disputes arising from the use of this tool.
+            The developer shall not be liable for any data loss, image corruption, or legal disputes arising from the
+            use of this tool. Use of this tool is at your own risk.
           </p>
         </section>
       </div>
 
       <div class="mt-12 text-center">
-        <a href="index.html" class="inline-flex items-center gap-2 px-6 py-3 bg-white border border-gray-200 text-gray-700 font-medium text-xs md:text-base rounded-xl hover:bg-gray-50 hover:border-gray-300 transition-all shadow-sm">
-          <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
+        <a href="index.html"
+          class="inline-flex items-center gap-2 px-6 py-3 bg-primary-500 hover:bg-primary-600 text-white border border-transparent font-medium rounded-md transition-colors shadow-sm">
+          <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18">
+            </path>
+          </svg>
           I have read and agree to the terms
         </a>
       </div>
@@ -126,10 +210,11 @@
     </div>
   </main>
 
-  <footer class="bg-emerald-600 text-white pt-12 pb-8 mt-auto">
+  <footer class="bg-gray-100 dark:bg-[#111] border-t border-gray-200 dark:border-simple-dark-border py-12">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="text-center text-sm text-emerald-200">
-        <p>&copy; <span id="year">2025</span> Gemini Watermark Remover. All rights reserved.</p>
+      <div class="text-center text-sm text-gray-500 dark:text-gray-400">
+        <p>&copy; <span id="year">2026</span> Gemini Watermark Remover. All rights reserved.</p>
+        <p class="mt-2 text-xs font-bold">Educational Use Only</p>
       </div>
     </div>
   </footer>
@@ -138,4 +223,5 @@
   </script>
 
 </body>
+
 </html>
