--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gemini Watermark Remover | Advanced AI Tool</title>
   <meta name="description" content="Free Gemini watermark remover tool. Clean, private, and 100% browser-based.">
+  <meta name="msvalidate.01" content="0427491464DF31A882F5859206535714" />
   <link rel="icon"
     href="data:image/svg+xml,%3Csvg class='h-10 w-10 text-blue-500' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M12 3l-1.9 5.8-5.8 1.9 5.8 1.9 1.9 5.8 1.9-5.8 5.8-1.9-5.8-1.9z'/%3E%3C/svg%3E">
 
@@ -156,59 +157,117 @@
     <!-- Hero Section -->
     <section class="pt-16 pb-12 lg:pt-24 lg:pb-20 text-center px-4">
 
-      <div class="animate-fade-in">
-        <!-- Neutral Badge -->
-        <span
-          class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-zinc-100 text-zinc-600 dark:bg-zinc-800 dark:text-zinc-300 mb-6 border border-zinc-200 dark:border-zinc-700">
-          Pure Browser-Based Processing
-        </span>
+      <div class="flex flex-col 2xl:flex-row justify-center items-start gap-8 max-w-[1800px] mx-auto relative">
 
-        <h2 class="font-extrabold text-4xl md:text-6xl tracking-tight mb-6" data-i18n="main.title">
-          Remove Gemini AI <br class="hidden md:block" />
-          <span class="text-zinc-900 dark:text-white">Watermark Removal</span>
-        </h2>
-
-        <p class="text-base md:text-lg text-zinc-500 dark:text-zinc-400 max-w-2xl mx-auto mb-10 leading-relaxed"
-          data-i18n="main.subtitle">
-          Based on the reverse alpha blending algorithm, pure browser-side processing, <br>
-          Free, Fast, and Lossless
-        </p>
-      </div>
-
-      <!-- Upload Area -->
-      <div class="max-w-3xl mx-auto simple-card p-2 md:p-3 animate-fade-in">
-        <div id="uploadArea"
-          class="group relative flex flex-col items-center justify-center w-full h-56 border border-dashed border-zinc-300 dark:border-zinc-700 rounded-lg bg-zinc-50/50 dark:bg-zinc-900/50 hover:bg-zinc-100 dark:hover:bg-zinc-800/80 hover:border-zinc-400 dark:hover:border-zinc-600 transition-all cursor-pointer duration-200">
-
-          <div class="flex flex-col items-center justify-center pt-5 pb-6 text-center z-10 p-4">
-            <svg class="w-12 h-12 text-gray-400 dark:text-gray-500 mb-4 group-hover:text-primary-500 transition-colors"
-              fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
-            </svg>
-            <p class="mb-2 text-xl font-medium" data-i18n="upload.text">Click to upload or drag & drop</p>
-            <p class="text-sm text-gray-500 dark:text-gray-400" data-i18n="upload.hint">Supports JPG, PNG, WebP (Max
-              20MB)</p>
+        <!-- Left Sidebar (Ads) -->
+        <aside class="hidden 2xl:flex flex-col gap-6 w-[380px] shrink-0 sticky top-24 pt-4">
+          <!-- Ad Slot 1 (Live) -->
+          <div
+            class="w-[360px] h-[280px] mx-auto rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden flex justify-center items-center shadow-sm">
+            <!-- User provided ad code -->
+            <!-- User provided ad code (Scaled to fit) -->
+            <div class="w-full h-full flex justify-center items-center overflow-hidden">
+              <div style="transform: scale(0.75);">
+                <script type="text/javascript">
+                  atOptions = {
+                    'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
+                    'format': 'iframe',
+                    'height': 60,
+                    'width': 468,
+                    'params': {}
+                  };
+                </script>
+                <script type="text/javascript"
+                  src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
+              </div>
+            </div>
           </div>
-          <input type="file" id="fileInput" accept="image/jpeg,image/png,image/webp" multiple class="hidden" />
-        </div>
-      </div>
 
-      <p class="mt-4 text-xs text-gray-500 dark:text-gray-500">
-        Results are generated locally. Images are never uploaded.
-      </p>
+          <!-- Ad Slot 2 (Placeholder) -->
+          <div id="ad-slot-2"
+            class="w-[360px] min-h-[280px] h-auto mx-auto rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden p-2">
+            <!-- User provided native ad code -->
+            <div class="w-full flex justify-center items-center">
+              <script async="async" data-cfasync="false"
+                src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
+              <div id="container-b8f35e28568025af05f61002666f2bf3"></div>
+            </div>
+          </div>
+
+        </aside>
+
+        <!-- Main Content Column -->
+        <div class="flex-1 w-full max-w-4xl px-2">
+          <div class="animate-fade-in">
+            <!-- Neutral Badge -->
+            <span
+              class="inline-flex items-center px-3 py-1 rounded-full text-xs font-medium bg-zinc-100 text-zinc-600 dark:bg-zinc-800 dark:text-zinc-300 mb-6 border border-zinc-200 dark:border-zinc-700">
+              Pure Browser-Based Processing
+            </span>
+
+            <h2 class="font-extrabold text-4xl md:text-6xl tracking-tight mb-6" data-i18n="main.title">
+              Remove Gemini AI <br class="hidden md:block" />
+              <span class="text-zinc-900 dark:text-white">Watermark Removal</span>
+            </h2>
+
+            <p class="text-base md:text-lg text-zinc-500 dark:text-zinc-400 max-w-2xl mx-auto mb-10 leading-relaxed"
+              data-i18n="main.subtitle">
+              Based on the reverse alpha blending algorithm, pure browser-side processing, <br>
+              Free, Fast, and Lossless
+            </p>
+          </div>
+
+          <!-- Upload Area -->
+          <div class="max-w-3xl mx-auto simple-card p-2 md:p-3 animate-fade-in">
+            <div id="uploadArea"
+              class="group relative flex flex-col items-center justify-center w-full h-56 border border-dashed border-zinc-300 dark:border-zinc-700 rounded-lg bg-zinc-50/50 dark:bg-zinc-900/50 hover:bg-zinc-100 dark:hover:bg-zinc-800/80 hover:border-zinc-400 dark:hover:border-zinc-600 transition-all cursor-pointer duration-200">
+
+              <div class="flex flex-col items-center justify-center pt-5 pb-6 text-center z-10 p-4">
+                <svg
+                  class="w-12 h-12 text-gray-400 dark:text-gray-500 mb-4 group-hover:text-primary-500 transition-colors"
+                  fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"></path>
+                </svg>
+                <p class="mb-2 text-xl font-medium" data-i18n="upload.text">Click to upload or drag & drop</p>
+                <p class="text-sm text-gray-500 dark:text-gray-400" data-i18n="upload.hint">Supports JPG, PNG, WebP (Max
+                  20MB)</p>
+              </div>
+              <input type="file" id="fileInput" accept="image/jpeg,image/png,image/webp" multiple class="hidden" />
+            </div>
+          </div>
+
+          <p class="mt-4 text-xs text-gray-500 dark:text-gray-500">
+            Results are generated locally. Images are never uploaded.
+          </p>
+        </div>
+
+        <!-- Right Sidebar (Ads) -->
+        <aside class="hidden 2xl:flex flex-col gap-6 w-[380px] shrink-0 sticky top-24 pt-4">
+          <!-- Ad Slot 5 (Placeholder) -->
+          <div id="ad-slot-5"
+            class="w-[360px] h-[280px] mx-auto rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden">
+            <div style="transform: scale(0.75);">
+              <script type="text/javascript">
+                atOptions = {
+                  'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
+                  'format': 'iframe',
+                  'height': 60,
+                  'width': 468,
+                  'params': {}
+                };
+              </script>
+              <script type="text/javascript"
+                src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
+            </div>
+          </div>
+
+        </aside>
+
+      </div>
     </section>
 
-    <!-- Ad Space -->
-    <section class="max-w-4xl mx-auto px-4 mb-20 animate-fade-in">
-      <div
-        class="w-full h-32 md:h-40 bg-gray-100 dark:bg-zinc-900 border-2 border-dashed border-gray-200 dark:border-zinc-800 rounded-xl flex items-center justify-center relative overflow-hidden group">
-        <div class="text-center">
-          <p class="text-gray-400 dark:text-gray-600 text-sm font-medium uppercase tracking-widest">Advertisement</p>
-          <p class="text-xs text-gray-300 dark:text-gray-700 mt-1">Free space for ads</p>
-        </div>
-      </div>
-    </section>
+
 
     <!-- Single Preview Area -->
     <section id="singlePreview" class="max-w-7xl mx-auto px-4 pb-24" style="display: none;">
@@ -307,21 +366,10 @@
       <div id="imageList" class="space-y-4"></div>
     </section>
 
-    <!-- Ad Space (Bottom) -->
-    <section class="py-20 bg-gray-50 dark:bg-zinc-950">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div
-          class="w-full h-64 bg-white dark:bg-zinc-900 border-2 border-dashed border-gray-200 dark:border-zinc-800 rounded-xl flex items-center justify-center relative overflow-hidden group">
-          <div class="text-center">
-            <p class="text-gray-400 dark:text-gray-600 text-sm font-medium uppercase tracking-widest">Advertisement</p>
-            <p class="text-xs text-gray-300 dark:text-gray-700 mt-1">Free space for ads</p>
-          </div>
-        </div>
-      </div>
-    </section>
+
   </main>
 
-  <footer class="bg-gray-100 dark:bg-[#111] border-t border-gray-200 dark:border-zinc-800 py-8">
+  <footer class="bg-white dark:bg-zinc-950 border-t border-gray-200 dark:border-zinc-800 py-8">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
       <!-- Bottom Bar -->
