--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gemini Watermark Remover | Advanced AI Tool</title>
-  <meta name="description" content="Free Gemini watermark remover tool. Clean, private, and 100% browser-based.">
+  <title>Gemini Watermark Remover | Free & Private AI Image Tool</title>
+  <meta name="description"
+    content="Use our free Gemini Watermark Remover to clean images instantly. 100% browser-based, private, and lossless AI watermark removal tool. No uploads required.">
   <meta name="msvalidate.01" content="0427491464DF31A882F5859206535714" />
   <link rel="icon"
     href="data:image/svg+xml,%3Csvg class='h-10 w-10 text-blue-500' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M12 3l-1.9 5.8-5.8 1.9 5.8 1.9 1.9 5.8 1.9-5.8 5.8-1.9-5.8-1.9z'/%3E%3C/svg%3E">
@@ -110,6 +111,9 @@
       z-index: 1000;
     }
   </style>
+  
+  <!-- Popup Ad Script (triggers on download) -->
+  <script src="https://pl28710933.effectivegatecpm.com/fc/8b/2a/fc8b2adffe474da083fa1a43037d52b4.js"></script>
 </head>
 
 <body
@@ -131,9 +135,9 @@
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="m12 3-1.9 5.8-5.8 1.9 5.8 1.9 1.9 5.8 1.9-5.8 5.8-1.9-5.8-1.9Z"></path>
         </svg>
-        <h1 class="text-lg font-bold tracking-tight">
+        <div class="text-lg font-bold tracking-tight">
           Gemini <span class="text-zinc-500 dark:text-zinc-400 font-normal">Watermark Remover</span>
-        </h1>
+        </div>
       </div>
 
       <nav class="flex items-center gap-1">
@@ -156,42 +160,45 @@
   <main class="flex-grow flex flex-col justify-center w-full">
     <!-- Hero Section -->
     <section class="pt-16 pb-12 lg:pt-24 lg:pb-20 text-center px-4">
+      
+      <!-- Mobile Ad (Top) - Banner 468x60 - Only visible on mobile/tablet -->
+      <div class="2xl:hidden max-w-lg mx-auto mb-8">
+        <div class="w-full min-h-[80px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
+          <script>
+            atOptions = {
+              'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
+              'format': 'iframe',
+              'height': 60,
+              'width': 468,
+              'params': {}
+            };
+          </script>
+          <script src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
+        </div>
+      </div>
 
       <div class="flex flex-col 2xl:flex-row justify-center items-start gap-8 max-w-[1800px] mx-auto relative">
 
-        <!-- Left Sidebar (Ads) -->
-        <aside class="hidden 2xl:flex flex-col gap-6 w-[380px] shrink-0 sticky top-24 pt-4">
-          <!-- Ad Slot 1 (Live) -->
-          <div
-            class="w-[360px] h-[280px] mx-auto rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden flex justify-center items-center shadow-sm">
-            <!-- User provided ad code -->
-            <!-- User provided ad code (Scaled to fit) -->
-            <div class="w-full h-full flex justify-center items-center overflow-hidden">
-              <div style="transform: scale(0.75);">
-                <script type="text/javascript">
-                  atOptions = {
-                    'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
-                    'format': 'iframe',
-                    'height': 60,
-                    'width': 468,
-                    'params': {}
-                  };
-                </script>
-                <script type="text/javascript"
-                  src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
-              </div>
-            </div>
+        <!-- Left Sidebar (Ads) - Hidden on mobile, shown on 2xl+ screens -->
+        <aside class="hidden 2xl:flex flex-col gap-6 w-full max-w-[380px] shrink-0 sticky top-24 self-start" style="max-height: calc(100vh - 7rem);">
+          <!-- Ad Slot 1 - Native Banner -->
+          <div class="w-full flex-1 min-h-[200px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden flex justify-center items-center shadow-sm p-4">
+            <script async="async" data-cfasync="false" src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
+            <div id="container-b8f35e28568025af05f61002666f2bf3"></div>
           </div>
 
-          <!-- Ad Slot 2 (Placeholder) -->
-          <div id="ad-slot-2"
-            class="w-[360px] min-h-[280px] h-auto mx-auto rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden p-2">
-            <!-- User provided native ad code -->
-            <div class="w-full flex justify-center items-center">
-              <script async="async" data-cfasync="false"
-                src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
-              <div id="container-b8f35e28568025af05f61002666f2bf3"></div>
-            </div>
+          <!-- Ad Slot 2 - Banner 468x60 -->
+          <div id="ad-slot-2" class="w-full flex-1 min-h-[100px] rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden p-4">
+            <script>
+              atOptions = {
+                'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
+                'format': 'iframe',
+                'height': 60,
+                'width': 468,
+                'params': {}
+              };
+            </script>
+            <script src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
           </div>
 
         </aside>
@@ -205,10 +212,10 @@
               Pure Browser-Based Processing
             </span>
 
-            <h2 class="font-extrabold text-4xl md:text-6xl tracking-tight mb-6" data-i18n="main.title">
+            <h1 class="font-extrabold text-4xl md:text-6xl tracking-tight mb-6" data-i18n="main.title">
               Remove Gemini AI <br class="hidden md:block" />
               <span class="text-zinc-900 dark:text-white">Watermark Removal</span>
-            </h2>
+            </h1>
 
             <p class="text-base md:text-lg text-zinc-500 dark:text-zinc-400 max-w-2xl mx-auto mb-10 leading-relaxed"
               data-i18n="main.subtitle">
@@ -242,28 +249,32 @@
           </p>
         </div>
 
-        <!-- Right Sidebar (Ads) -->
-        <aside class="hidden 2xl:flex flex-col gap-6 w-[380px] shrink-0 sticky top-24 pt-4">
-          <!-- Ad Slot 5 (Placeholder) -->
-          <div id="ad-slot-5"
-            class="w-[360px] h-[280px] mx-auto rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden">
-            <div style="transform: scale(0.75);">
-              <script type="text/javascript">
-                atOptions = {
-                  'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
-                  'format': 'iframe',
-                  'height': 60,
-                  'width': 468,
-                  'params': {}
-                };
-              </script>
-              <script type="text/javascript"
-                src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
-            </div>
+        <!-- Right Sidebar (Ads) - Hidden on mobile, shown on 2xl+ screens -->
+        <aside class="hidden 2xl:flex flex-col gap-6 w-full max-w-[380px] shrink-0 sticky top-24 self-start" style="max-height: calc(100vh - 7rem);">
+          <!-- Ad Slot 3 - Banner 468x60 -->
+          <div id="ad-slot-3" class="w-full flex-1 min-h-[100px] rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden p-4">
+            <script>
+              atOptions = {
+                'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
+                'format': 'iframe',
+                'height': 60,
+                'width': 468,
+                'params': {}
+              };
+            </script>
+            <script src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
           </div>
 
         </aside>
 
+      </div>
+
+      <!-- Mobile Ad (Bottom) - Native Banner - Only visible on mobile/tablet -->
+      <div class="2xl:hidden max-w-lg mx-auto mt-8">
+        <div class="w-full min-h-[120px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
+          <script async="async" data-cfasync="false" src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
+          <div id="container-b8f35e28568025af05f61002666f2bf3-mobile"></div>
+        </div>
       </div>
     </section>
 
