--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gemini Watermark Remover | Free & Private AI Image Tool</title>
+  <title>Gemini Watermark Remover | Free AI Watermark Remover from Image</title>
   <meta name="description"
-    content="Use our free Gemini Watermark Remover to clean images instantly. 100% browser-based, private, and lossless AI watermark removal tool. No uploads required.">
+    content="Free AI Watermark Remover to clean images instantly. Best alternative to paid tools. Remove watermarks from images online, 100% free, private, and browser-based.">
+  <meta name="keywords"
+    content="watermark remover, remove watermark, ai watermark remover, remove watermark from image, free watermark remover, watermark remover online, gemini watermark remover">
   <meta name="msvalidate.01" content="0427491464DF31A882F5859206535714" />
   <link rel="icon"
     href="data:image/svg+xml,%3Csvg class='h-10 w-10 text-blue-500' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M12 3l-1.9 5.8-5.8 1.9 5.8 1.9 1.9 5.8 1.9-5.8 5.8-1.9-5.8-1.9z'/%3E%3C/svg%3E">
@@ -80,6 +82,14 @@
       background: #09090b;
     }
 
+    /* Sidebar Ad Styling */
+    aside[class*="2xl:block"]>div {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      padding: 1rem;
+    }
+
     /* Premium Card Styles */
     .simple-card {
       background-color: white;
@@ -111,7 +121,7 @@
       z-index: 1000;
     }
   </style>
-  
+
   <!-- Popup Ad Script (triggers on download) -->
   <script src="https://pl28710933.effectivegatecpm.com/fc/8b/2a/fc8b2adffe474da083fa1a43037d52b4.js"></script>
 </head>
@@ -160,10 +170,11 @@
   <main class="flex-grow flex flex-col justify-center w-full">
     <!-- Hero Section -->
     <section class="pt-16 pb-12 lg:pt-24 lg:pb-20 text-center px-4">
-      
+
       <!-- Mobile Ad (Top) - Banner 468x60 - Only visible on mobile/tablet -->
       <div class="2xl:hidden max-w-lg mx-auto mb-8">
-        <div class="w-full min-h-[80px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
+        <div
+          class="w-full min-h-[80px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
           <script>
             atOptions = {
               'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
@@ -180,27 +191,13 @@
       <div class="flex flex-col 2xl:flex-row justify-center items-start gap-8 max-w-[1800px] mx-auto relative">
 
         <!-- Left Sidebar (Ads) - Hidden on mobile, shown on 2xl+ screens -->
-        <aside class="hidden 2xl:flex flex-col gap-6 w-full max-w-[380px] shrink-0 sticky top-24 self-start" style="max-height: calc(100vh - 7rem);">
-          <!-- Ad Slot 1 - Native Banner -->
-          <div class="w-full flex-1 min-h-[200px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden flex justify-center items-center shadow-sm p-4">
-            <script async="async" data-cfasync="false" src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
+        <aside class="hidden 2xl:block w-[300px] shrink-0 sticky top-24 self-start">
+          <!-- Tall Vertical Ad Container -->
+          <div class="w-full min-h-[600px] rounded-lg overflow-hidden bg-zinc-100 dark:bg-zinc-900">
+            <script async="async" data-cfasync="false"
+              src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
             <div id="container-b8f35e28568025af05f61002666f2bf3"></div>
           </div>
-
-          <!-- Ad Slot 2 - Banner 468x60 -->
-          <div id="ad-slot-2" class="w-full flex-1 min-h-[100px] rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden p-4">
-            <script>
-              atOptions = {
-                'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
-                'format': 'iframe',
-                'height': 60,
-                'width': 468,
-                'params': {}
-              };
-            </script>
-            <script src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
-          </div>
-
         </aside>
 
         <!-- Main Content Column -->
@@ -213,8 +210,8 @@
             </span>
 
             <h1 class="font-extrabold text-4xl md:text-6xl tracking-tight mb-6" data-i18n="main.title">
-              Remove Gemini AI <br class="hidden md:block" />
-              <span class="text-zinc-900 dark:text-white">Watermark Removal</span>
+              Free AI <br class="hidden md:block" />
+              <span class="text-zinc-900 dark:text-white">Watermark Remover</span>
             </h1>
 
             <p class="text-base md:text-lg text-zinc-500 dark:text-zinc-400 max-w-2xl mx-auto mb-10 leading-relaxed"
@@ -247,12 +244,56 @@
           <p class="mt-4 text-xs text-gray-500 dark:text-gray-500">
             Results are generated locally. Images are never uploaded.
           </p>
+
+          <!-- SEO Content Section -->
+          <div class="mt-16 text-left max-w-3xl mx-auto space-y-8 animate-fade-in">
+            <section>
+              <h2 class="text-2xl font-bold text-zinc-900 dark:text-zinc-100 mb-4">
+                Advanced AI Watermark Remover
+              </h2>
+              <p class="text-zinc-600 dark:text-zinc-400 leading-relaxed">
+                Looking for a <strong>free watermark remover</strong>? Our tool uses advanced <strong>AI</strong> to
+                <strong>remove watermarks from images</strong> instantly. Unlike <strong>HitPaw watermark
+                  remover</strong>
+                or <strong>Watermarkly</strong>, we offer a completely free, browser-based solution that respects your
+                privacy.
+              </p>
+            </section>
+
+            <section>
+              <h3 class="text-xl font-semibold text-zinc-900 dark:text-zinc-100 mb-3">
+                How to Remove Watermark from Image?
+              </h3>
+              <p class="text-zinc-600 dark:text-zinc-400 leading-relaxed mb-4">
+                Simply upload your photo to our active watermark remover. Whether it's a <strong>TikTok
+                  watermark</strong>, logo, or text, our AI handles it. We support <strong>JPG</strong>,
+                <strong>PNG</strong>, and <strong>WebP</strong> formats.
+              </p>
+              <ul class="list-disc list-inside space-y-2 text-zinc-600 dark:text-zinc-400 ml-4">
+                <li><strong>Private & Secure</strong>: Images are processed locally in your browser.</li>
+                <li><strong>No Watermark</strong>: Download your clean images with no new watermark added.</li>
+                <li><strong>Better than paid tools</strong>: A great free alternative to dewatermark and others.</li>
+              </ul>
+            </section>
+
+            <section>
+              <h3 class="text-xl font-semibold text-zinc-900 dark:text-zinc-100 mb-3">
+                Why use our AI Watermark Remover?
+              </h3>
+              <p class="text-zinc-600 dark:text-zinc-400 leading-relaxed">
+                Our <strong>online watermark remover</strong> is designed for speed and quality. Say goodbye to complex
+                software like Photoshop. With just one click, you can <strong>remove watermark from photo</strong> and
+                get
+                professional results.
+              </p>
+            </section>
+          </div>
         </div>
 
         <!-- Right Sidebar (Ads) - Hidden on mobile, shown on 2xl+ screens -->
-        <aside class="hidden 2xl:flex flex-col gap-6 w-full max-w-[380px] shrink-0 sticky top-24 self-start" style="max-height: calc(100vh - 7rem);">
-          <!-- Ad Slot 3 - Banner 468x60 -->
-          <div id="ad-slot-3" class="w-full flex-1 min-h-[100px] rounded-xl bg-zinc-100 dark:bg-zinc-900 flex flex-col justify-center items-center shadow-sm overflow-hidden p-4">
+        <aside class="hidden 2xl:block w-[300px] shrink-0 sticky top-24 self-start">
+          <!-- Tall Vertical Ad Container -->
+          <div class="w-full min-h-[600px] rounded-lg overflow-hidden bg-zinc-100 dark:bg-zinc-900">
             <script>
               atOptions = {
                 'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
@@ -264,15 +305,16 @@
             </script>
             <script src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
           </div>
-
         </aside>
 
       </div>
 
       <!-- Mobile Ad (Bottom) - Native Banner - Only visible on mobile/tablet -->
       <div class="2xl:hidden max-w-lg mx-auto mt-8">
-        <div class="w-full min-h-[120px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
-          <script async="async" data-cfasync="false" src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
+        <div
+          class="w-full min-h-[120px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
+          <script async="async" data-cfasync="false"
+            src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
           <div id="container-b8f35e28568025af05f61002666f2bf3-mobile"></div>
         </div>
       </div>
