--- a/public/index.html
+++ b/public/index.html
@@ -82,14 +82,6 @@
       background: #09090b;
     }
 
-    /* Sidebar Ad Styling */
-    aside[class*="2xl:block"]>div {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-      padding: 1rem;
-    }
-
     /* Premium Card Styles */
     .simple-card {
       background-color: white;
@@ -122,8 +114,12 @@
     }
   </style>
 
-  <!-- Popup Ad Script (triggers on download) -->
-  <script src="https://pl28710933.effectivegatecpm.com/fc/8b/2a/fc8b2adffe474da083fa1a43037d52b4.js"></script>
+  <!-- Ad Script -->
+  <script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var u=window,h="a5055eee82786ce16f1f6a9b3471f993",r=[["siteId",817+9*888+5268451],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],y=["d3d3LmNkbjRhZHMuY29tL0RWZy9nYWp2Lm1pbi5qcw==","ZDNnNW92Zm5nanc5YncuY2xvdWRmcm9udC5uZXQvQkFFQ1kvRnFJWnMva29ib2UtYnJvd3Nlci5taW4uY3Nz"],d=-1,z,o,j=function(){clearTimeout(o);d++;if(y[d]&&!(1797132981000<(new Date).getTime()&&1<d)){z=u.document.createElement("script");z.type="text/javascript";z.async=!0;var p=u.document.getElementsByTagName("script")[0];z.src="https://"+atob(y[d]);z.crossOrigin="anonymous";z.onerror=j;z.onload=function(){clearTimeout(o);u[h.slice(0,16)+h.slice(0,16)]||j()};o=setTimeout(j,5E3);p.parentNode.insertBefore(z,p)}};if(!u[h]){try{Object.freeze(u[h]=r)}catch(e){}j()}})();
+/*]]>/* */
+  </script>
 </head>
 
 <body
@@ -171,37 +167,7 @@
     <!-- Hero Section -->
     <section class="pt-16 pb-12 lg:pt-24 lg:pb-20 text-center px-4">
 
-      <!-- Mobile Ad (Top) - Banner 468x60 - Only visible on mobile/tablet -->
-      <div class="2xl:hidden max-w-lg mx-auto mb-8">
-        <div
-          class="w-full min-h-[80px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
-          <script>
-            atOptions = {
-              'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
-              'format': 'iframe',
-              'height': 60,
-              'width': 468,
-              'params': {}
-            };
-          </script>
-          <script src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
-        </div>
-      </div>
-
-      <div class="flex flex-col 2xl:flex-row justify-center items-start gap-8 max-w-[1800px] mx-auto relative">
-
-        <!-- Left Sidebar (Ads) - Hidden on mobile, shown on 2xl+ screens -->
-        <aside class="hidden 2xl:block w-[300px] shrink-0 sticky top-24 self-start">
-          <!-- Tall Vertical Ad Container -->
-          <div class="w-full min-h-[600px] rounded-lg overflow-hidden bg-zinc-100 dark:bg-zinc-900">
-            <script async="async" data-cfasync="false"
-              src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
-            <div id="container-b8f35e28568025af05f61002666f2bf3"></div>
-          </div>
-        </aside>
-
-        <!-- Main Content Column -->
-        <div class="flex-1 w-full max-w-4xl px-2">
+      <div class="flex flex-col justify-center items-center max-w-4xl mx-auto px-2">
           <div class="animate-fade-in">
             <!-- Neutral Badge -->
             <span
@@ -289,35 +255,6 @@
             </section>
           </div>
         </div>
-
-        <!-- Right Sidebar (Ads) - Hidden on mobile, shown on 2xl+ screens -->
-        <aside class="hidden 2xl:block w-[300px] shrink-0 sticky top-24 self-start">
-          <!-- Tall Vertical Ad Container -->
-          <div class="w-full min-h-[600px] rounded-lg overflow-hidden bg-zinc-100 dark:bg-zinc-900">
-            <script>
-              atOptions = {
-                'key': 'b5d7281a48fd0926d2b2f0f7b6da0e20',
-                'format': 'iframe',
-                'height': 60,
-                'width': 468,
-                'params': {}
-              };
-            </script>
-            <script src="https://www.highperformanceformat.com/b5d7281a48fd0926d2b2f0f7b6da0e20/invoke.js"></script>
-          </div>
-        </aside>
-
-      </div>
-
-      <!-- Mobile Ad (Bottom) - Native Banner - Only visible on mobile/tablet -->
-      <div class="2xl:hidden max-w-lg mx-auto mt-8">
-        <div
-          class="w-full min-h-[120px] rounded-xl bg-zinc-100 dark:bg-zinc-900 overflow-hidden shadow-sm flex justify-center items-center p-3">
-          <script async="async" data-cfasync="false"
-            src="https://pl28710800.effectivegatecpm.com/b8f35e28568025af05f61002666f2bf3/invoke.js"></script>
-          <div id="container-b8f35e28568025af05f61002666f2bf3-mobile"></div>
-        </div>
-      </div>
     </section>
 
 
